--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,22 @@
 
 #app {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: black;
   color: white;
   padding-top: 2rem;
+  padding-bottom: 1rem;
 }
 .myContainer {
   width: 50%;
   margin: auto;
 }
+
 .sfondo {
   background-color: white;
   color: black;
   border-radius: 10px;
+  border: 1px solid black;
 }
 ul {
   border-radius: 10px;
@@ -30,7 +33,9 @@ li {
   padding: 1rem;
   border: 1px solid grey;
 }
-
+span:hover {
+  cursor: pointer;
+}
 input,
 textarea {
   max-height: 7rem;
